// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MalcolmMiddlePanel renders a container only if the no widget tag found for mainAttribute 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-plainBackground-8"
  />
</div>
`;

exports[`MalcolmMiddlePanel renders alarmed correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={4}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 32,
          "right": 32,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        data-cy="palettebutton"
        onClick={[Function]}
        variant="fab"
      >
        <pure(PaletteIcon) />
      </WithStyles(Button)>
    </div>
    <div
      className="MiddlePanelContainer-autoLayoutButton-6"
      style={
        Object {
          "right": 29,
          "top": 12,
        }
      }
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        onClick={[Function]}
        variant="raised"
      >
        Auto layout
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders an archive viewer pane if the mainAttribute is a "standard" attribute allowed type 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-plainBackground-8"
  >
    <div
      className="MiddlePanelContainer-tableContainer-7"
      style={
        Object {
          "left": 360,
          "width": "calc(100% - 360px)",
        }
      }
    >
      <Connect(WithTheme(AttributeViewer))
        attributeName="health"
        blockName="test1"
        typeId="malcolm:core/StringMeta:1.0"
        widgetTag="widget:textupdate"
      />
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders errored correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={2}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 32,
          "right": 32,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        data-cy="palettebutton"
        onClick={[Function]}
        variant="fab"
      >
        <pure(PaletteIcon) />
      </WithStyles(Button)>
    </div>
    <div
      className="MiddlePanelContainer-autoLayoutButton-6"
      style={
        Object {
          "right": 29,
          "top": 12,
        }
      }
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        onClick={[Function]}
        variant="raised"
      >
        Auto layout
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders layout correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={0}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 32,
          "right": 32,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        data-cy="palettebutton"
        onClick={[Function]}
        variant="fab"
      >
        <pure(PaletteIcon) />
      </WithStyles(Button)>
    </div>
    <div
      className="MiddlePanelContainer-autoLayoutButton-6"
      style={
        Object {
          "right": 29,
          "top": 12,
        }
      }
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        onClick={[Function]}
        variant="raised"
      >
        Auto layout
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders pending correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={-1}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 32,
          "right": 32,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        data-cy="palettebutton"
        onClick={[Function]}
        variant="fab"
      >
        <pure(PaletteIcon) />
      </WithStyles(Button)>
    </div>
    <div
      className="MiddlePanelContainer-autoLayoutButton-6"
      style={
        Object {
          "right": 29,
          "top": 12,
        }
      }
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        onClick={[Function]}
        variant="raised"
      >
        Auto layout
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders table correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-plainBackground-8"
  >
    <div
      className="MiddlePanelContainer-tableContainer-7"
      style={
        Object {
          "left": 360,
          "width": "calc(100% - 360px)",
        }
      }
    >
      <Connect(WithTheme(TableContainer))
        attributeName="layout"
        blockName="test1"
        footerItems={
          Array [
            <WithStyles(Tooltip)
              id="1"
              placement="right"
              title=""
          >
              <WithStyles(IconButton)
                  className="MiddlePanelContainer-button-9"
                  disableRipple={true}
              >
                  <WithTheme(AttributeAlarm)
                      alarmSeverity={0}
                  />
              </WithStyles(IconButton)>
          </WithStyles(Tooltip)>,
          ]
        }
      />
    </div>
  </div>
</div>
`;
